# server/source/system/casbin.go
@@ -45,6 +45,9 @@ func (i *initCasbin) InitializeData(ctx context.Context) (context.Context, error
 		return ctx, system.ErrMissingDBContext
 	}
 	entities := []adapter.CasbinRule{
+		{Ptype: "p", V0: "9528", V1: "/ai/modelConfig/errorAnalysis", V2: "GET"},
+		{Ptype: "p", V0: "9528", V1: "/ai/modelConfig/errorAnalysis", V2: "PUT"},
+		{Ptype: "p", V0: "9528", V1: "/ai/modelConfig/errorAnalysis/test", V2: "POST"},
 		{Ptype: "p", V0: "888", V1: "/user/admin_register", V2: "POST"},
 
 		{Ptype: "p", V0: "888", V1: "/sysLoginLog/deleteLoginLog", V2: "DELETE"},
@@ -234,7 +237,7 @@ func (i *initCasbin) InitializeData(ctx context.Context) (context.Context, error
 		{Ptype: "p", V0: "888", V1: "/sysError/updateSysError", V2: "PUT"},
 		{Ptype: "p", V0: "888", V1: "/sysError/findSysError", V2: "GET"},
 		{Ptype: "p", V0: "888", V1: "/sysError/getSysErrorList", V2: "GET"},
-		{Ptype: "p", V0: "888", V1: "/sysError/getSysErrorSolution", V2: "GET"},
+		{Ptype: "p", V0: "888", V1: "/sysError/getSysErrorSolution", V2: "POST"},
 
 		{Ptype: "p", V0: "888", V1: "/info/createInfo", V2: "POST"},
 		{Ptype: "p", V0: "888", V1: "/info/deleteInfo", V2: "DELETE"},
